--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <p>
           <a href="#" > Download Excursion (coming soon)</a>
         </p>
+        <p>
+          <video src="resources/and_videos/excursion.mp4" controls autoplay> video not supported </video>
       </div>
   </body>
 </html>
