--- a/index.html
+++ b/index.html
@@ -14,8 +14,17 @@
         <p>
           <a href="#" > Download Excursion (coming soon)</a>
         </p>
+      </div>
         <p>
           <video src="resources/and_videos/excursion.mp4" controls autoplay> video not supported </video>
-      </div>
+      <!--second section-->
+      <div class="second tagline">
+        <h1>Your personal travel guide</h1>
+          <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
+          <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported, it is a picture of a camping site"/>
+          </p>
+      <div class="cellphone image">
+          <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon"/>
+          </p>
   </body>
 </html>
