--- a/index.html
+++ b/index.html
@@ -23,8 +23,18 @@
           <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
           <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported, it is a picture of a camping site"/>
           </p>
-      <div class="cellphone image">
+      <div class="cellphone icon">
           <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="cellphone icon"/>
           </p>
+      </div>
+      <!--final section-->
+        <h1>Coming Soon for iPhone and Android</h1>
+      <div class="cta-link">
+            <p> <a href="#"> Download Excursion (Coming Soon!)</a>
+      </div>
+      <div class="footer">
+            <p> &copy;Excursion </p>
+      </div>
+
   </body>
 </html>
