--- a/index.html
+++ b/index.html
@@ -10,16 +10,15 @@
       <div class="main-banner">
         <h1>Discover hidden places in the world around you </h1>
       </div>
-      <div class="cta-link">
         <p>
-          <a href="#" > Download Excursion (coming soon)</a>
+          <a class="ctalink" href="#" > Download Excursion (coming soon)</a>
         </p>
       </div>
         <p>
-          <video src="resources/and_videos/excursion.mp4" controls autoplay> video not supported </video>
+          <video src="resources/and_videos/excursion.mp4" controls autoplay controls loop> video not supported </video>
       <!--second section-->
       <div class="second tagline">
-        <h1>Your personal travel guide</h1>
+        <h2>Your personal travel guide</h2>
           <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
           <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported, it is a picture of a camping site"/>
           </p>
@@ -28,10 +27,9 @@
           </p>
       </div>
       <!--final section-->
-        <h1>Coming Soon for iPhone and Android</h1>
-      <div class="cta-link">
-            <p> <a href="#"> Download Excursion (Coming Soon!)</a>
-      </div>
+        <h2>Coming Soon for iPhone and Android</h2>
+            <p> <a class="ctalink" href="#"> Download Excursion (Coming Soon!)</a></p>
+
       <div class="footer">
             <p> &copy;Excursion </p>
       </div>
