--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <!--second section-->
       <div class="second tagline">
         <h2>Your personal travel guide</h2>
-          <p>Excursion remembers places you like, and reccomends new points of interest around you.</p>
+          <p class="subh2">Excursion remembers places you like, and reccomends new points of interest around you.</p>
           <p> <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="image not supported, it is a picture of a camping site"/>
           </p>
       <div class="cellphone icon">
@@ -30,8 +30,8 @@
         <h2>Coming Soon for iPhone and Android</h2>
             <p> <a class="ctalink" href="#"> Download Excursion (Coming Soon!)</a></p>
 
-      <div class="footer">
-            <p> &copy;Excursion </p>
+      <div footer>
+            <p class="footer"> &copy;Excursion </p>
       </div>
 
   </body>
